--- a/src/app/pages/Credits/Credits.scss
+++ b/src/app/pages/Credits/Credits.scss
@@ -25,7 +25,7 @@
         display: block;
 
         &-hidden {
-          .markdownRenderer > *:not(.credits-content-body-section-subtitle) {
+          > .markdownRenderer > *:not(.credits-content-body-section-subtitle) {
             display: none;
           }
         }
