--- a/src/app/pages/ForAuthors/ForAuthors.scss
+++ b/src/app/pages/ForAuthors/ForAuthors.scss
@@ -66,7 +66,11 @@
         display: block;
 
         &-hidden {
-          .markdownRenderer > *:not(.forAuthors-content-body-section-subtitle) {
+          > .markdownRenderer > *:not(.forAuthors-content-body-section-subtitle) {
+            display: none;
+          }
+
+          > .forAuthors-content-body-section-cards {
             display: none;
           }
         }
