--- a/src/app/pages/ForReviewers/ForReviewers.scss
+++ b/src/app/pages/ForReviewers/ForReviewers.scss
@@ -26,7 +26,7 @@
         display: block;
 
         &-hidden {
-          .markdownRenderer > *:not(.forReviewers-content-body-section-subtitle) {
+          > .markdownRenderer > *:not(.forReviewers-content-body-section-subtitle) {
             display: none;
           }
         }
